# redfish/openapi/merged/redfish-openapi.yaml
@@ -494,6 +494,16 @@ components:
           type: string
           x-longDescription: This property shall contain the serial number for the
             system.
+        HostName:
+          description: The DNS host name, without any domain information.
+          nullable: true
+          readOnly: false
+          type: string
+          x-longDescription: This property shall contain the host name for this system,
+            as reported by the operating system or hypervisor.  A service running
+            in the host operating system typically reports this value to the manager.  Modifying
+            this property may modify the `HostName` in one or more `EthernetInterface`
+            resources contained in this system.
         Status:
           $ref: '#/components/schemas/Resource_Status'
           description: The status and health of the resource and its subordinate or
@@ -1539,13 +1549,6 @@ components:
             that cannot be conveyed with other properties defined for the Placement
             object.
           x-versionAdded: v1_7_0
-        FacilityName:
-          description: The name of the facility.
-          nullable: true
-          readOnly: false
-          type: string
-          x-longDescription: This property shall contain the name of the facility.
-          x-versionAdded: v1_23_0
         Rack:
           description: The name of a rack location within a row.
           nullable: true
@@ -1560,9 +1563,8 @@ components:
           nullable: true
           readOnly: false
           type: integer
-          x-longDescription: The vertical location of the item in the rack, at the
-            lowest point of the unit.  Rack offset units shall be measured from bottom
-            to top, starting with 0.
+          x-longDescription: The vertical location of the item in the rack.  Rack
+            offset units shall be measured from bottom to top, starting with 0.
           x-versionAdded: v1_3_0
         RackOffsetUnits:
           description: The type of rack units in use.
@@ -1574,14 +1576,6 @@ components:
           x-longDescription: This property shall contain a RackUnit enumeration literal
             that indicates the type of rack units in use.
           x-versionAdded: v1_3_0
-        Room:
-          description: The name or number of the room.
-          nullable: true
-          readOnly: false
-          type: string
-          x-longDescription: This property shall contain the name or number of the
-            room.
-          x-versionAdded: v1_23_0
         Row:
           description: The name of the row.
           nullable: true
